--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="container">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
                 <!-- add image -->
@@ -40,7 +40,155 @@
                 </div>
             </div>
         </nav>
+        <!-- slider -->
+        <section class="mt-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active border rounded bg-info p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h1>Cool Dud Haed phone</h1>
+                                    <p>This is the best head phone in the world</p>
+                                    <h1>$420</h1>
+                                    <div class="btn btn-warning">Buy Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="carousel-item active border rounded bg-info p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h1>Cool Dud Haed phone</h1>
+                                    <p>This is the best head phone in the world</p>
+                                    <h1>$420</h1>
+                                    <div class="btn btn-warning">Buy Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="carousel-item active border rounded bg-info p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center">
+                                <div>
+                                    <h1>Cool Dud Haed phone</h1>
+                                    <p>This is the best head phone in the world</p>
+                                    <h1>$420</h1>
+                                    <div class="btn btn-warning">Buy Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
     </header>
+    <main>
+        <!-- categories start -->
+        <section class="">
+            <div class="container text-center m-5">
+                <div class="row g-2">
+                    <!-- single catergory  -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                            <h2 class="text-white">Watch</h2>
+                            <img src="images/categories/watch.png" alt="">
+
+                        </div>
+                    </div>
+                    <!-- single catergory  -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+                            <h2 class="text-white">Watch</h2>
+                            <img src="images/categories/shoes.png" alt="">
+
+                        </div>
+                    </div>
+                    <!-- single catergory  -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3">
+                            <h2 class="text-white">Watch</h2>
+                            <img src="images/categories/bag.png" alt="">
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- categories end -->
+        <!-- shoes  -->
+        <section class="container my-5">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                <div class="col">
+                    <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">PUMA</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg  h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy now</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-0 shadow-lg  h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Air force</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <div class="m-3">
+                            <div class="btn btn-warning">Buy now</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- shoes  -->
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
