--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg bg-light fixed-top">
             <div class="container">
                 <!-- add image -->
                 <a class="navbar-brand" href="#"> <img src="images/logo.png" alt=""></a>
@@ -26,13 +26,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscrib</a>
+                            <a class="nav-link" href="#subscribe">Subscrib</a>
                         </li>
 
                     </ul>
@@ -109,8 +109,8 @@
     </header>
     <main>
         <!-- categories start -->
-        <section class="">
-            <div class="container text-center m-5">
+        <section class="container my-5">
+            <div class="container text-center ">
                 <div class="row g-2">
                     <!-- single catergory  -->
                     <div class="col-lg-4 col-md-6 col-sm-12">
@@ -141,8 +141,8 @@
             </div>
         </section>
         <!-- categories end -->
-        <!-- shoes  -->
-        <section class="container my-5">
+        <!-- shoes start -->
+        <section class="container my-5" id="shoes">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -193,7 +193,7 @@
         </section>
         <!-- shoes end -->
         <!-- Backpack section  -->
-        <section class="container my-5">
+        <section class="container my-5" id="backpack">
             <h2>Backpack</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -244,7 +244,27 @@
             </div>
         </section>
         <!-- Backpack section end -->
+        <!-- subscribe  -->
+        <section style="height: 300px;"
+            class="container rounded-3 d-flex justify-content-center align-items-center bg-info" id="subscribe">
+            <div class="">
+                <div>
+                    <h2>Lets Stay IN Touch</h2>
+                    <p>Get updates on sales, specials and more</p>
+                </div>
+                <form>
+                    <div class="mb-1">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+
+                    </div>
+                    <button type="submit" class="btn btn-warning">Submit</button>
+                </form>
+            </div>
+        </section>
     </main>
+    <footer class="text-center mt-5">
+        <p><small>@2022. Panda Commerce. All rights reserve. Sofia, Bulgaria.</small></p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
